# sender-notifications

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: auth.py  config.py  controllers.py  main.py  register_deps.py  schemas.py  sender.py
src/templates/: notification.html
