[project]
name = "sender-notifications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "bleach>=6.3.0",
    "litestar[pydantic,redis,standard]>=2.20.0",
    "pydantic-settings>=2.12.0",
    "sentry-sdk>=2.53.0",
]
